fixed the overflows

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -26,6 +26,7 @@
 
     h1{
       font-family: 'Righteous', cursive;
+      overflow: hidden; 
       background:url('https://media.giphy.com/media/l396ISDU0oS6gDIUU/giphy.gif') center center no-repeat;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
